--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -34,7 +34,7 @@
 		padding: 0px;
 		background: #EFEDE0;
 		font-family: 'OpenSansBold', sans-serif;
-		font-size: 12pt;
+		font-size: 11pt;
 		font-weight: 400;
 		color: #7F7F7F;
 	}
@@ -90,11 +90,11 @@
 			border-radius: 3px;
 			padding: 10px;
 			box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-			width: 30%;
+			width: 400px;
 			margin-top: 2em;
 			padding: 0.5em 1em 0.5em 1em;
 		}
-		#form
+		#form-registration
 		{
 			margin-left:auto;
 			margin-right:auto;
@@ -102,10 +102,14 @@
 			border-radius: 3px;
 			padding: 10px;
 			box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-			width: 60%;
+			width: 600px;
 			margin-top: 2em;
 			margin-bottom: 2em;
 			padding: 0.5em 1em 0.5em 1em;
+		}
+		form
+		{
+		
 		}
 		
 			form label
@@ -126,7 +130,7 @@
 		
 			form input.text,
 			form select,
-			form textarea
+			form textarea,
 			{
 				position: relative;
 				-webkit-appearance: none;
@@ -135,9 +139,8 @@
 				background: #fff;
 				background: rgba(255,255,255,0.75);
 				width: 100%;
-				border-radius: 0.50em;
+				border-radius: 3px;
 				margin: 1em 0em;
-				padding: 1.50em 1em;
 				box-shadow: inset 0 0.1em 0.1em 0 rgba(0,0,0,0.05);
 				border: solid 1px rgba(0,0,0,0.15);
 				-moz-transition: all 0.35s ease-in-out;
@@ -145,8 +148,9 @@
 				-o-transition: all 0.35s ease-in-out;
 				-ms-transition: all 0.35s ease-in-out;
 				transition: all 0.35s ease-in-out;
-				font-family: 'Source Sans Pro', sans-serif;
-				font-size: 1em;
+				font-family: 'OpenSansBold', sans-serif;
+				font-size: 11pt;
+				color: #7F7F7F;
 				outline: none;
 			}
 
@@ -158,7 +162,7 @@
 
 				form input.text:focus,
 				form select:focus,
-				form textarea:focus
+				form textarea:focus,
 				{
 					box-shadow: 0 0 2px 1px #E0E0E0;
 					background: #fff;
@@ -363,6 +367,9 @@
 	{
 		font-size: 2.8em;
 		color: rgba(255,255,255,0.9);
+		padding: 1em;
+		text-align: center;
+		
 	}
 	
 	.title .byline
@@ -376,8 +383,6 @@
 	.orange
 	{
 		color: #E0A81D;
-		padding: 1em;
-		text-align: center;
 	}
 
 /*********************************************************************************/
