--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -15,19 +15,37 @@
 	}
 	
 	
-	h1, h2, h3
+	h1, h2
 	{
 		margin: 0;
 		color: #393E38;
 	}
 	
+	h3
+	{
+		margin: 0; 
+		color: #393E38;
+		font-size: 10pt;
+		font-style: italic;
+	}
+	
+	h4
+	{
+		margin: 0; 
+		color: #E0A81D;
+		font-size: 12pt;
+	}
+	
+	h5
+	{
+		margin: 0;
+		color: #b54322;
+		font-size: 12pt;
+	}
+	
 	p, ol, ul
 	{
 		margin-top: 0;
-	}
-	
-	div {
-		text-align:center;
 	}
 	
 	ol, ul
@@ -56,6 +74,16 @@
 		width: 1200px;
 	}
 	
+	.center
+	{
+		text-align: center;
+	}
+	
+	.left 
+	{
+		text-align: left;
+		margin-left: 10%;
+	}
 
 /*********************************************************************************/
 /* Form Style                                                                    */
@@ -109,7 +137,7 @@
 		
 			form input.text,
 			form select,
-			form textarea,
+			form textarea
 			{
 				position: relative;
 				-webkit-appearance: none;
@@ -141,7 +169,7 @@
 
 				form input.text:focus,
 				form select:focus,
-				form textarea:focus,
+				form textarea:focus
 				{
 					box-shadow: 0 0 2px 1px #E0E0E0;
 					background: #fff;
@@ -242,7 +270,36 @@
 		margin-left: 25px;
 		margin-right: 25px;
 	}
-
+	
+	li.left-panel
+	{
+		background: #ffffff;
+		border-radius: 3px;
+		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+		width: 300px;
+		height: 200px;
+		padding: 0.5em 1em 0.5em 1em;
+		margin-top: 50px;
+		margin-left: 25px;
+		margin-right: 25px;
+		display: inline-block;
+		list-style-type: none;
+	}
+	
+	li.right-panel 
+	{
+		background: #ffffff;
+		border-radius: 3px;
+		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+		width: 600px;
+		height: 500px;
+		padding: 0.5em 1em 0.5em 1em;
+		margin-top: 50px;
+		margin-left: 25px;
+		margin-right: 25px;
+		display: inline-block;
+		list-style-type: none;
+	}
 
 /*********************************************************************************/
 /* Social Icon Styles                                                            */
@@ -373,6 +430,12 @@
 	.orange
 	{
 		color: #E0A81D;
+	}
+	.title h3
+	{
+		font-size: 2.8em;
+		color: #37a883;
+		padding: 1em;
 	}
 
 /*********************************************************************************/
