--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -33,7 +33,11 @@
 	{
 		margin: 0; 
 		color: #E0A81D;
-		font-size: 12pt;
+		font-size: 15pt;
+		text-align: left;
+		margin-bottom: 1em;
+		margin-top: 1em;
+		margin-left: 1em;
 	}
 	
 	h5
@@ -42,7 +46,17 @@
 		color: #b54322;
 		font-size: 12pt;
 	}
-	
+	h6
+	{
+		text-decoration: none;
+        margin-right: 1em;
+        margine-left: 1em;
+        vertical-align: center;
+        font-family: 'OpenSansBold', sans-serif;
+		font-size: 11pt;
+		font-weight: 400;
+		color: #37a883;
+	}
 	p, ol, ul
 	{
 		margin-top: 0;
@@ -63,11 +77,23 @@
 	{
 	}
 	
+	#page-content 
+	{
+		text-align: center; 
+		margin-left: auto; 
+		margin-right: auto;
+	}
 	a
 	{
         text-decoration: none;
+        margin-right: 1em;
+        margine-left: 1em;
+        vertical-align: center;
+        font-family: 'OpenSansBold', sans-serif;
+		font-size: 11pt;
+		font-weight: 400;
+		color: white;
 	}
-
 	.container
 	{
 		margin: 0px auto;
@@ -274,7 +300,6 @@
 		margin-left: 25px;
 		margin-right: 25px;
 	}
-	
 	li.left-panel
 	{
 		background: #ffffff;
@@ -295,8 +320,8 @@
 		background: #ffffff;
 		border-radius: 3px;
 		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-		width: 600px;
-		height: 500px;
+		width: 700px;
+		/*height: 500px;*/
 		padding: 0.5em 1em 0.5em 1em;
 		margin-top: 50px;
 		margin-left: 25px;
@@ -308,7 +333,12 @@
 /*********************************************************************************/
 /* Social Icon Styles                                                            */
 /*********************************************************************************/
-
+	
+	ul 
+	{
+		text-align: center;
+	}
+	
 	ul.contact
 	{
 		margin: 0;
@@ -463,11 +493,29 @@
 /* Group-display                                                                       */
 /*********************************************************************************/
 
-Group-display
+group-display
 {
 	align: center;
 }
 
+/*********************************************************************************/
+/* Tables                                                                       */
+/*********************************************************************************/
+
+table
+{
+	text-align: left; 
+	margin-left: auto; 
+	margin-right: auto;
+}
+	.table-available
+	{
+		background: #E0A81D;
+	}
+	.table-unavilable
+	{
+	
+	}
 
 /*********************************************************************************/
 /* Logo                                                                          */
