--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -12,6 +12,7 @@
 		font-size: 11pt;
 		font-weight: 400;
 		color: #7F7F7F;
+		text-align: "left";
 	}
 	
 	
@@ -94,6 +95,10 @@
 		font-weight: 400;
 		color: white;
 	}
+	a:active, a:hover
+	{
+		color: #37a883;
+	}
 	.container
 	{
 		margin: 0px auto;
@@ -124,7 +129,7 @@
 			margin-left:auto;
 			margin-right:auto;
 			background: #ffffff;
-			border-radius: 3px;
+			border-radius: 2px;
 			padding: 10px;
 			box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 			width: 400px;
@@ -136,7 +141,7 @@
 			margin-left:auto;
 			margin-right:auto;
 			background: #ffffff;
-			border-radius: 3px;
+			border-radius: 2px;
 			padding: 10px;
 			box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 			width: 600px;
@@ -289,7 +294,7 @@
 	li.group-box
 	{
 		background: #ffffff;
-		border-radius: 3px;
+		border-radius: 2px;
 		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 		width: 300px;
 		height: 150px;
@@ -303,7 +308,7 @@
 	li.left-panel
 	{
 		background: #ffffff;
-		border-radius: 3px;
+		border-radius: 2px;
 		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 		width: 300px;
 		height: 200px;
@@ -317,9 +322,9 @@
 	
 	li.right-panel 
 	{
-		background: #ffffff;
-		border-radius: 3px;
-		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+		/*background: #ffffff;
+		border-radius: 2px;
+		box-shadow: 0 1px 2px rgba(0,0,0,0.2);*/
 		width: 700px;
 		/*height: 500px;*/
 		padding: 0.5em 1em 0.5em 1em;
@@ -389,7 +394,7 @@
 		padding: 0.5em 1em 0.5em 1em;
 		background: #E0A81D;
 		border: 0;
-		border-radius: 3px;
+		border-radius: 2px;
 		line-height: 1em;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -404,7 +409,7 @@
 		padding: 0.5em 1em 0.5em 1em;
 		background: #37a883;
 		border: 0;
-		border-radius: 3px;
+		border-radius: 2px;
 		line-height: 1em;
 		text-decoration: none;
 		text-transform: uppercase;
