--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -277,7 +277,7 @@ a
 		width: 250px;
 		height: 200px;
 		padding: 0.5em 1em 0.5em 1em;
-		margin-top: 50px;
+		margin-top: 25px;
 		margin-left: 25px;
 		margin-right: 10px;
 		display: inline-block;
@@ -292,9 +292,20 @@ a
 		width: 700px;
 		/*height: 500px;*/
 		padding: 0.5em 1em 0.5em 1em;
-		margin-top: 50px;
+		margin-top: 25px;
 		margin-left: 10px;
 		margin-right: 25px;
+		display: inline-block;
+		list-style-type: none;
+	}
+	li.right-panel-white
+	{
+		background: #ffffff;
+		border-radius: 2px;
+		box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+		width: 700px;
+		/*height: 500px;*/
+		padding: 0.5em 1em 0.5em 1em;
 		display: inline-block;
 		list-style-type: none;
 	}
@@ -401,7 +412,17 @@ a
 /* Heading Titles                                                                */
 /*********************************************************************************/
 	
-	h1, h2
+	h1
+	{
+		margin: 0;
+		color: #393E38;
+		text-align: center;
+		/*border-bottom: 1px dotted #ccc;*/
+		margin-bottom: 1em;
+		
+	}
+	
+	h2
 	{
 		margin: 0;
 		color: #393E38;
@@ -496,7 +517,7 @@ table
 	}
 	.table-heading
 	{
-		fon-weight: 400;
+		font-weight: 400;
 	}
 
 /*********************************************************************************/
